@@ -8,9 +8,9 @@ DIST jdk-7-ea-bin-b32-linux-i586-04_aug_2008.bin 61585642 RMD160 4c4f3bd438485cf
 DIST jdk-7-ea-bin-b32-linux-x64-04_aug_2008.bin 55187003 RMD160 b2d193dd08f1b3c357ba8253a147352f5a09922a SHA1 ef946a3d1fa63ca28027e2d8782e47f210d4bfae SHA256 f3a53955667168dd312a6fc3b424b636821e0ac52b993ea7a4c086566125ca39
 DIST jdk-7-ea-bin-b33-linux-i586-14_aug_2008.bin 61612532 RMD160 5fe967d1849d9573d5c35edf3f99dd8d4f978855 SHA1 12407ef925769b2e7ee9d9a9f09ea781cde2534e SHA256 f9020822160b58d27ec5d28d9d32ced9ce556baaaf96f2e8e694204cf9f40aa3
 DIST jdk-7-ea-bin-b33-linux-x64-14_aug_2008.bin 55186360 RMD160 05507884e00262252994eacccf0d4ddcc67c44e7 SHA1 f8a57172a7e908e2133b557db97118c949596ad3 SHA256 d9b71fc06c64ce8c7687004d5a9873a6b13b39faa5bd16b4c3ad5f2e16a98e90
-EBUILD sun-jdk-1.6.0.10_beta28.ebuild 4822 RMD160 dfa5e93daffd5af73daf647f8f1b928f0b8a52ca SHA1 7d8241890e8015b0405f5a4b2cfb9f37a3bd5fb2 SHA256 5a2f54774ce83e17c92553061116b508d0f3638e180782e078962978a902f75f
+EBUILD sun-jdk-1.6.0.10_beta28.ebuild 5120 RMD160 4ed419075c8b8fb295d6344501496ee66ad2fce1 SHA1 f74b2c3167bc0e9e2cd6a59a11a9a8ab068c35b8 SHA256 0136d29ed8c7de3e997879ad80f32287333c25cee11b4fdc0b5c5fb657a149fa
 EBUILD sun-jdk-1.7.0.0_alpha31.ebuild 4669 RMD160 6b902523c878b4769d9b81882aafb31e8fbcbace SHA1 2150abed2b706b8b53b5d1ac3787dc2970ccd4f0 SHA256 81d195e5be5034b74f3dd3854d60ae52e9eb3fc843be51e5fbd8aaec2cf4b868
 EBUILD sun-jdk-1.7.0.0_alpha32.ebuild 4669 RMD160 de26661aa24033a3673b92b31ae5a957d12d6bc6 SHA1 9c2794126a47795b437efa8505b557f4cf55a70b SHA256 a51166a2069fcf00d2e123845cf44a6556b0cf11952d51c147dc33668899a2b1
 EBUILD sun-jdk-1.7.0.0_alpha33.ebuild 4669 RMD160 b0d6c20ecdd3a8de079cfae08cdb0e0f8014bfd7 SHA1 77262dcdecc575436acc3dde84fe6c136b5245f9 SHA256 e8dfd422728ae49bfa6a2fcf8028607a75fb6673c81f46b69de658925259da97
-MISC ChangeLog 7573 RMD160 cf129ce43ec5f6304a32307834f827ad1d2f66de SHA1 d542ba4067f209ecb4bc8f8ba583997199da5a6e SHA256 3afe96c94310500a9f7525451c9ab0704a72e1873ecdea4023958dfe4a77edb0
+MISC ChangeLog 7735 RMD160 562548a831cacbc117ac78be80054ff7f6895dd6 SHA1 cb9675d574311879080855b4e3d80a094013d911 SHA256 18f8ffd5a73e591cca91c3a9dd7702fc533b4f524fcc9b65ade8d2b02b969415
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
